# megapy

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: pytest.ini
src/megapy/: __init__.py  exceptions.py  mega_wrapper.py
src/tests/: conftest.py  test_general.py
